# practicerom-pkg

./: Makefile.in  configure  configure.ac
config/share/practicerom-pkg/targets/: deb-all.in
etc/practicerom-pkg/: practicerom-pkg.conf
share/practicerom-pkg/debian/: practicerom.list
share/practicerom-pkg/debian/dists/staging/: Release.header
share/practicerom-pkg/debian/dists/staging/main/binary-amd64/gzinject/debian/: changelog  control
share/practicerom-pkg/debian/dists/staging/main/binary-amd64/n64-ultra/debian/: changelog  control  rules
share/practicerom-pkg/debian/dists/staging/main/binary-amd64/practicerom-dev/debian/: changelog  control
share/practicerom-pkg/debian/dists/staging/main/binary-amd64/wii-toolchain/debian/: changelog  control  rules
share/practicerom-pkg/targets/: deb-gzinject  deb-n64-ultra  deb-practicerom-dev  deb-wii-toolchain
